Ignore ThreatMatch responses for lists that we don't care about.

Due to aliasing used on the server side, the server may send ThreatMatch
response for lists that we don't track. For instance, ThreatMatch with
platform_type as CHROME on Linux. Ignore such ThreatMatch responses.

BUG=663247

Review-Url: https://codereview.chromium.org/2490753002
Cr-Commit-Position: refs/heads/master@{#431131}

Former-commit-id: bfcde5d0640845a210555226cd7de95cb5bb63b4